Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Module: added heap integrity alert, added task ownership to heap check report, added task handles to
    task log, added debug options to web UI (Config → Notifications)
  New config:
    [module] debug.heap.alert   -- [bool] perform heap check every 5 minutes, send alert on corruption (default: no)
  Command extension:
    test heapcorruption <restore|keep>  -- default: 'restore', use 'keep' to test heap alert
  History record extension:
    "*-OVM-DebugTasks" v2: per task record extended by <handle>
- Module framework: enable remote use of the system's heap corruption test, i.e. command "module check"
    can now be used within any shell or command channel, not just the USB console.
  New command(s):
    test heapcorruption -- test for heap integrity checker
- Workaround for iOS Open Vehicle App 1.8.6
    Workaround for legacy iOS App, hiding zero/negative temperatures to keep other TPMS data visible.
    This workaround only manipulates the TPMS temperature metric in message W.
- New vehicle: FIAT eDoblo via OBD-II port
    Initial support added for:
      VIN, SoC, SoH
      Door status
      Odometer
      HV, LV battery voltage
      temperatures
- TPMS framework: added sensor mapping commands for wheel rotation/swap scenarios
    New commands:
      tpms map status   -- show current TPMS sensor-to-wheel mapping with details
      tpms map get      -- machine-readable output like message Y without header MP-0 Y
      tpms map set      -- remap sensors using wheel position names (e.g., fl=rr fr=fl rl=fr rr=rl)
      tpms map reset    -- reset mapping to default (e.g. FL=0, FR=1, RL=2, RR=3)
    Config: [vehicle] tpms.xx (sensor index per wheel position, layout by GetTpmsLayout())
    Note: requires vehicle to implement UsesTpmsSensorMapping() returning true
- New vehicle: Maxus T90 EV (MT90) via OBD-II port
    Initial support added for:
      VIN, SOC, SOH & READY state